changed compatibility to java 8